--- a/app/MemberModule/components/VisualPaginator.latte
+++ b/app/MemberModule/components/VisualPaginator.latte
@@ -10,7 +10,7 @@
 	<b>Stránky:</b>
 	
 	{if !$paginator->isFirst()}
-	<a class="buttonLike" href="{link this, 'page' => $paginator->page - 1}">{include svg name => backward} Předchozí</a>
+	<a class="buttonLike" href="{link this, 'page' => $paginator->page - 1}">{include svg icon => backward} Předchozí</a>
 	{/if}
 
 	{foreach $steps as $step}
@@ -23,7 +23,7 @@
 	{/foreach}
 
 	{if !$paginator->isLast()}
-	<a class="buttonLike" href="{link this, 'page' => $paginator->page + 1}">Další {include svg name => forward}</a>
+	<a class="buttonLike" href="{link this, 'page' => $paginator->page + 1}">Další {include svg icon => forward}</a>
 	{/if}
 </div>
 {/if}
