--- a/app/MemberModule/templates/Sign.in.latte
+++ b/app/MemberModule/templates/Sign.in.latte
@@ -16,12 +16,12 @@
 	<div class="social-login">
 		<p>
 			<a rel="nofollow" n:class="google, $googleLastLogin ? last-login" title="Přihlásit se pomocí Googlu" href="{$googleLoginUrl}">
-				{include svg name => google-plus} Přihlásit se přes Google
+				{include svg icon => google-plus} Přihlásit se přes Google
 			</a>
 		</p>
 		<p>
 			<a rel="nofollow" n:class="facebook, $facebookLastLogin ? last-login" title="Přihlásit se pomocí Facebooku" href="{$facebookLoginUrl}">
-				{include svg name => facebook} Přihlásit se přes Facebook
+				{include svg icon => facebook} Přihlásit se přes Facebook
 			</a>
 		</p>
 	</div>
