--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -14,22 +14,22 @@
 <ul class="buttonMenu">
 	<li n:if="(($user->isInRole('admin')or($member->id == $user->getId()))and(!is_null($member->role)))">
 		<a class="buttonLike" n:href="edit,$member->id">
-			{include svg name => pencil} editovat
+			{include svg icon => pencil} editovat
 		</a>
 	</li>
 	<li n:if="($user->isInRole('board'))and(!is_null($member->role))">
 		<a class="buttonLike confirm" n:href="delete,$member->id" data-query="Opravdu chcete tohoto člena smazat? Tento krok může vrátit jen admin.">
-			{include svg name => trash} smazat
+			{include svg icon => trash} smazat
 		</a>
 	</li>
 	<li n:if="($user->isInRole('admin'))and(is_null($member->role))">
 		<a class="buttonLike confirm" n:href="activate,$member->id" data-query="Opravdu chcete tohoto uživatele aktivovat?">
-			{include svg name => ok} aktivovat
+			{include svg icon => ok} aktivovat
 		</a>
 	</li>
 	<li n:if="($user->isInRole('board'))and(!is_null($member->role))">
 		<a class="buttonLike" n:href="resetPassword, $member->id">
-			{include svg name => repeat} resetovat heslo
+			{include svg icon => repeat} resetovat heslo
 		</a>
 	</li>
 </ul>
@@ -37,29 +37,29 @@
 <div n:if="$fileExists" class="float-left" id="photo"><img src="{$basePath}/img/portrets/{$member->id}.jpg" alt="fotografie"></div>
 
 <a class="buttonLike head" n:href="vcf, $member->id" title="stáhnout vizitku ve formátu .vfc">
-	{include svg name => user} {$member->name} {$member->surname}
+	{include svg icon => user} {$member->name} {$member->surname}
 </a>
 
 <div id="member" class="float-left">
 
-	<p>{include svg name => user} <b>Osobní číslo:</b> {$member->id}</p>
+	<p>{include svg icon => user} <b>Osobní číslo:</b> {$member->id}</p>
 	{if $user->isInRole('board')}
-		<p>{include svg name => calendar} <b>Datum narození:</b> {$member->date_born|date:'d.m.Y'} ({$narozeni->format('%y')} let)</p>
+		<p>{include svg icon => calendar} <b>Datum narození:</b> {$member->date_born|date:'d.m.Y'} ({$narozeni->format('%y')} let)</p>
 		<ul class="bulletless">
 			<li n:if="$member->date_add">
-				{include svg name => calendar-plus-o} <b>Datum registrace:</b>
+				{include svg icon => calendar-plus-o} <b>Datum registrace:</b>
 				<span title="{$member->date_add|timeAgoInWords}">
 					{$member->date_add|date:'d.m.Y'}
 				</span>
 			</li>
 			<li n:if="$member->date_update">
-				{include svg name => calendar-o} <b>Datum úpravy:</b>
+				{include svg icon => calendar-o} <b>Datum úpravy:</b>
 				<span title="{$member->date_update|timeAgoInWords}">
 					{$member->date_update|date:'d.m.Y'}
 				</span>
 			</li>
 			<li n:if="$last_login">
-				{include svg name => calendar-check-o} <b>Datum posledního přihlášení:</b>
+				{include svg icon => calendar-check-o} <b>Datum posledního přihlášení:</b>
 				<span title="{$last_login->date_add|timeAgoInWords}">
 					{$last_login->date_add|date:'d.m.Y H:i'}
 				</span>
@@ -69,10 +69,10 @@
 		<p><b>Věk:</b> {$narozeni->format('%y')}</p>
 	{/if}
 
-	<p>{include svg name => building} <b>Zaměstnání/Škola:</b> {$member->zamestnani}</p>
+	<p>{include svg icon => building} <b>Zaměstnání/Škola:</b> {$member->zamestnani}</p>
 
 {if $user->isInRole('member')}
-<h3>{include svg name => map-marker} Adresa:</h3>
+<h3>{include svg icon => map-marker} Adresa:</h3>
 <address class="out">
 	{$member->ulice}<br>
 	{$member->mesto}
@@ -81,10 +81,10 @@
 
 <h3>Kontakty:</h3>
 	<ul class="bulletless">
-		<li n:if="$member->mail">{include svg name => envelope} <b>E-mail:</b> <a href="mailto:{$member->mail}">{$member->mail}</a></li>
-		<li n:if="$member->telefon">{include svg name => phone} <b>Telefon:</b> {$member->telefon|number:0:'.':' '}</li>
-		<li n:if="$member->mail2">{include svg name => envelope-o} <b>Sekundární e-mail:</b> <a href="mailto:{$member->mail2}">{$member->mail2}</a></li>
-		<li n:if="$member->telefon2">{include svg name => phone-square} <b>Sekundární telefon:</b> {$member->telefon2|number:0:'.':' '}</li>
+		<li n:if="$member->mail">{include svg icon => envelope} <b>E-mail:</b> <a href="mailto:{$member->mail}">{$member->mail}</a></li>
+		<li n:if="$member->telefon">{include svg icon => phone} <b>Telefon:</b> {$member->telefon|number:0:'.':' '}</li>
+		<li n:if="$member->mail2">{include svg icon => envelope-o} <b>Sekundární e-mail:</b> <a href="mailto:{$member->mail2}">{$member->mail2}</a></li>
+		<li n:if="$member->telefon2">{include svg icon => phone-square} <b>Sekundární telefon:</b> {$member->telefon2|number:0:'.':' '}</li>
 	</ul>
 
 <div id="poznamka">
