--- a/app/MemberModule/components/PostsListControl.latte
+++ b/app/MemberModule/components/PostsListControl.latte
@@ -6,12 +6,12 @@
     <div id="post/{$post->id}" n:class="post, target, ($post->date_add > $user->getIdentity()->date_last) ? 'new', ($user->id == $post->member_id) ? logged">
         <div class="top headerLike">
             <a class="float-right" href="{plink Forum:post $post->id}" title="{$post->date_add|timeAgoInWords}">
-                {include svg name => comments} {$post->date_add|date:'%d.%m.%Y %H:%M'}
+                {include svg icon => comments} {$post->date_add|date:'%d.%m.%Y %H:%M'}
             </a>
             <a href="{plink User:view $post->member_id}" title="profil uživatele">
                 <strong>
                     {$post->member->surname} {$post->member->name}
-                    {include svg name => user}
+                    {include svg icon => user}
                 </strong>
             </a>
         </div>
@@ -29,21 +29,21 @@
             {if $isTopic and $isAllow}
                 {if $isLocked}
                     <a class="buttonLike" href="{plink Forum:lockTopic $post->id,0}">
-                        {include svg name => unlock-alt} odemknout
+                        {include svg icon => unlock-alt} odemknout
                     </a>
                 {else}
                     <a class="buttonLike" href="{plink Forum:lockTopic $post->id,1}">
-                        {include svg name => lock} zamknout
+                        {include svg icon => lock} zamknout
                     </a>
                 {/if}
             {/if}
 
             {if !$isLocked}
                 {if $isAllow}
-                    <a class="buttonLike confirm" data-query="Opravdu chete příspěvek smazat?" href="{plink Forum:delete $post->id}">{include svg name => trash} smazat</a>
-                    <a class="buttonLike" href="{plink Forum:edit $post->id}">{include svg name => pencil} editovat</a>
+                    <a class="buttonLike confirm" data-query="Opravdu chete příspěvek smazat?" href="{plink Forum:delete $post->id}">{include svg icon => trash} smazat</a>
+                    <a class="buttonLike" href="{plink Forum:edit $post->id}">{include svg icon => pencil} editovat</a>
                 {/if}
-                <a class="buttonLike" href="{plink Forum:cite $post->id}">{include svg name => quote-left} citace</a>
+                <a class="buttonLike" href="{plink Forum:cite $post->id}">{include svg icon => quote-left} citace</a>
             {/if}
             </div>
 
