--- a/app/MemberModule/components/RatingControl.latte
+++ b/app/MemberModule/components/RatingControl.latte
@@ -18,7 +18,7 @@
 </script>
 
 {if isset($ratings)and($ratings)}
-    <h3 id="rating">Hodnocení {include svg name => star}</span></h3>
+    <h3 id="rating">Hodnocení {include svg icon => star}</span></h3>
     <div n:if="isset($rating_stars)"><span class="stars">{$rating_stars|stars}</span> ({$rating_count})</div>
     <div id="ratings">
         {var $limit = 100}
@@ -27,7 +27,7 @@
                 {if ($rating->rating)or($rating->message)}
                     <h4>
                         {if !$rating->anonymous}
-                            <a href="{plink User:view $memberId}">{include svg name => user} {$rating->member->surname} {$rating->member->name}</a>
+                            <a href="{plink User:view $memberId}">{include svg icon => user} {$rating->member->surname} {$rating->member->name}</a>
                         {else}
                             Anonymní:
                         {/if}
@@ -52,9 +52,9 @@
 {if $canComment}
     <div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
 
-    <h3 id="rating-edit">Moje hodnocení {include svg name => star-o}</span></h3>
+    <h3 id="rating-edit">Moje hodnocení {include svg icon => star-o}</span></h3>
 
-    <p id="rating-edit-sign" n:if="$myrating"><button id="editRating" class="buttonLike" data-member="{$user->id}">{include svg name => pencil} editovat</button></p>
+    <p id="rating-edit-sign" n:if="$myrating"><button id="editRating" class="buttonLike" data-member="{$user->id}">{include svg icon => pencil} editovat</button></p>
 
     <div id="rating-edit-area" n:class="$myrating ? hide">
     {form ratingForm}
@@ -64,7 +64,7 @@
 
             <div class="float-right">
 				<button n:name="ok" class="buttonLike">
-					{include svg name => check} uložit
+					{include svg icon => check} uložit
 				</button>
 			</div>
             <p>
