--- a/app/MemberModule/templates/Dokumenty.default.latte
+++ b/app/MemberModule/templates/Dokumenty.default.latte
@@ -30,11 +30,11 @@
 	{foreach $dir->related($TABLE_DIRECTORIES)->order('name') as $file}
 			<li class="dir">
 				<a id="{$file->id}" class="toogleDir">
-					<span>{include svg name => $root ? 'folder-open' : 'folder'}</span>
+					<span>{include svg icon => $root ? 'folder-open' : 'folder'}</span>
 					<strong>{$file->name}</strong>
 				</a>
 				<a n:if="$user->isInRole('board')and($root)" class="float-right" href="{$file->webViewLink}" target="_blank" title="otevřít">
-					{include svg name => chain} otevřít
+					{include svg icon => chain} otevřít
 				</a>
 			</li>
 			<ol id="folder-{$file->id}" n:class="!$root ? hide">
@@ -46,9 +46,9 @@
 				<img class="file-icon" height="16" width="16" src="{$file->iconLink}" title="{$file->mimeType}" alt="{$file->mimeType}">
 				<a class="link" title="Datum změny: {$file->modifiedTime|date:'d.m.Y H:i:s'}" href="{$file->webViewLink}">{$file->name}</a>
 				{if ($file->webContentLink)and(!Nette\Utils\Strings::startsWith($file->mimeType, 'application/vnd.google-apps'))}
-					<a class="float-right" href="{$file->webContentLink}" title="stáhnout">{include svg name => download} stáhnout</a>
+					<a class="float-right" href="{$file->webContentLink}" title="stáhnout">{include svg icon => download} stáhnout</a>
 				{else}
-					<a class="float-right" n:href="getPdf $file->id" title="stáhnout jako PDF">{include svg name => download} stáhnout</a>
+					<a class="float-right" n:href="getPdf $file->id" title="stáhnout jako PDF">{include svg icon => download} stáhnout</a>
 				{/if}
 				<small class="description">{$file->description}</small>
 			</li>
