--- a/app/MemberModule/templates/Hlasovani.default.latte
+++ b/app/MemberModule/templates/Hlasovani.default.latte
@@ -17,7 +17,7 @@ table#items .first { font-size: 1.1em;}
 
 {block #content}
 
-<p n:if="$user->isInRole('board')" class="right"><a class="buttonLike" n:href="add">{include svg name => plus} nové hlasování</a></p>
+<p n:if="$user->isInRole('board')" class="right"><a class="buttonLike" n:href="add">{include svg icon => plus} nové hlasování</a></p>
 
 <table id="items">
 <tr class="first"><th>Hlasování</th><th>Počet hlasů</th><th>Poslední hlas</th></tr>
@@ -32,7 +32,7 @@ table#items .first { font-size: 1.1em;}
 	$item->member_id == $user->getId() ? logged">
 	<td class="col"><a class="noLink" title="{$item->title}{if $locked} (uzamčeno){/if}" n:href="view,$item->id"><div>
 	<strong class="headerLike">
-		{if $locked}{include svg name => lock}{/if} {$item->title|firstUpper}
+		{if $locked}{include svg icon => lock}{/if} {$item->title|firstUpper}
 	</strong>
 	<span class="no-wrap">{$item->member->surname} {$item->member->name}</span>
 	</div></a></td>
@@ -51,7 +51,7 @@ table#items .first { font-size: 1.1em;}
 </table>
 
 <p class="right">
-<a n:href="Feed:hlasovani" class="buttonLike">{include svg name => feed} RSS Hlasováni</a>
+<a n:href="Feed:hlasovani" class="buttonLike">{include svg icon => feed} RSS Hlasováni</a>
 </p>
 
 {/block}
