--- a/app/MemberModule/templates/Hlasovani.view.latte
+++ b/app/MemberModule/templates/Hlasovani.view.latte
@@ -23,13 +23,13 @@
 
 <ul class="menu_right" n:if="($user->id == $anketa->member_id) or ($user->isInRole('admin'))">
 	<li><a n:href="edit,$anketa->id" class="buttonLike">
-		{include svg name => pencil} editovat</a>
+		{include svg icon => pencil} editovat</a>
 	</li>
 	<li><a n:href="delete,$anketa->id" class="buttonLike confirm" data-query="Opravdu chcete tuto anketu smazat?">
-		{include svg name => trash} smazat</a></li>
+		{include svg icon => trash} smazat</a></li>
 	<li n:if="$anketa->date_deatline > date_create()">
-	{if $locked}<a n:href="lock,$anketa->id,0" class="buttonLike">{include svg name => unlock-alt} odemknout</a>
-	{else}<a n:href="lock,$anketa->id,1" class="buttonLike">{include svg name => lock} zamknout</a>
+	{if $locked}<a n:href="lock,$anketa->id,0" class="buttonLike">{include svg icon => unlock-alt} odemknout</a>
+	{else}<a n:href="lock,$anketa->id,1" class="buttonLike">{include svg icon => lock} zamknout</a>
 	{/if}
 	</li>
 </ul>
@@ -44,7 +44,7 @@ title="{$anketa->date_update|timeAgoInWords}">Upraveno ({$anketa->date_update|da
 </div>
 
 {if $locked}
-<h3 class="center">{include svg name => lock} Toto hlasování je uzavřeno</h3>
+<h3 class="center">{include svg icon => lock} Toto hlasování je uzavřeno</h3>
 {else}
 <h3 class="center">Toto hlasování bude uzavřeno <span class="hint" title="{$anketa->date_deatline|date:'%d.%m.%Y'}">
 {$anketa->date_deatline|timeAgoInWords}</span></h3>
