--- a/app/MemberModule/templates/User.default.latte
+++ b/app/MemberModule/templates/User.default.latte
@@ -55,9 +55,9 @@
 
 {block #content}
 <ul class="buttonMenu">
-	<li><a n:href="vcfArchive" class="buttonLike">{include svg name => address-card-o} stáhnout vizitky</a></li>
-	<li n:if="$user->isInRole('board')"><a n:href="csv" class="buttonLike">{include svg name => file-excel-o} stáhnout exel</a></li>
-	<li n:if="$user->isInRole('board')"><a n:href="add" class="buttonLike">{include svg name => user-plus} nový člen</a></li>
+	<li><a n:href="vcfArchive" class="buttonLike">{include svg icon => address-card-o} stáhnout vizitky</a></li>
+	<li n:if="$user->isInRole('board')"><a n:href="csv" class="buttonLike">{include svg icon => file-excel-o} stáhnout exel</a></li>
+	<li n:if="$user->isInRole('board')"><a n:href="add" class="buttonLike">{include svg icon => user-plus} nový člen</a></li>
 </ul>
 
 {form memberSearchForm}
