Rework of user edit page (using UserFormFactory) + ability to send NewMemberMail woth button

--- a/app/MemberModule/templates/User.edit.latte
+++ b/app/MemberModule/templates/User.edit.latte
@@ -13,6 +13,7 @@
 	form table th label { font-weight: normal;}
  	.required label { font-weight: bold;}
 	#ui-datepicker-div { font-size: 1em;}
+	.error { color: red;}
 -->
 </style>
 
