User registration page

--- a/app/MemberModule/templates/Sign.in.latte
+++ b/app/MemberModule/templates/Sign.in.latte
@@ -32,5 +32,8 @@
 	<p>Pokud jsi zapomněl/a své přihlašovací jméno a heslo, tak zadej svůj e-mail, a na něj ti přijdou instrukce k jeho obnovení.</p>
 
 	<p class="required"><b>{control forgotPassForm}</p>
+	<hr>
+	<p><a n:href="register">Registrace nového člena</a></p>
+
 
 {/block}
