--- a/app/MemberModule/templates/Mail/restorePassword.latte
+++ b/app/MemberModule/templates/Mail/restorePassword.latte
@@ -1,11 +1,7 @@
-{layout '@mail_layout.latte'}
-{contentType text/html; charset=utf-8}
-{block content}
-    <p>Zdravím</p>
+Zdravím
 
-    <p>Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.</p>
+Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.
 
-    <p>Můžete si ho nastavit na adrese: <a n:href="//Sign:restorePassword pubkey => $session->pubkey">{link //Sign:restorePassword pubkey => $session->pubkey}</a></p>
+Můžete si ho nastavit na adrese: {link //Sign:restorePassword pubkey => $session->pubkey}
 
-    <p>Tento odkaz bude fungovat do {$session->date_end|date:'H:i:s d.m.Y'}</p>
-{/block}
+Tento odkaz bude fungovat do {$session->date_end|date:'H:i:s d.m.Y'}
