--- a/app/MemberModule/templates/Mail/akceConfirm.latte
+++ b/app/MemberModule/templates/Mail/akceConfirm.latte
@@ -1,15 +1,13 @@
-{layout '@mail_layout.latte'}
-{contentType text/html; charset=utf-8}
-{block content}
-    <p>Zdravím</p>
+Zdravím
 
-    <p>Na web byla přidána následující akce:</p>
+Na web byla přidána následující akce:
 
-    <strong>{$akce->name}</strong>
-    <p>{$akce->perex|noescape|texy}</p>
-    <p>Tato akce není schválena a čeká na Vaše potvrzení.</p>
+**{$akce->name}**
 
-    <p>Akci najdete na adrese <a n:href="//Akce:view,$akce->id">{link //Akce:view,$akce->id}</a></p>
+{$akce->perex}
 
-    <p>Prosím navštivte co nejdříve stránku akce, aby bylo možno se na akci přihlásit.</p>
-{/block}
+Tato akce není schválena a čeká na Vaše potvrzení.
+
+Akci najdete na adrese {link //Akce:view $akce->id}
+
+Prosím navštivte co nejdříve stránku akce, aby bylo možno se na akci přihlásit.
