--- a/app/MemberModule/templates/Mail/newMember.latte
+++ b/app/MemberModule/templates/Mail/newMember.latte
@@ -1,17 +1,11 @@
-﻿{layout '@mail_layout.latte'}
-{contentType text/html; charset=utf-8}
-{block content}
-    <p>Zdravím</p>
+﻿Zdravím
 
-    <p>Právě si byl zaregistrován do systému VZS Jablonec nad Nisou.</p>
+Právě si byl zaregistrován do systému VZS Jablonec nad Nisou.
 
-    <p>Svoje heslo si můžeš nastavit na adrese:
-        <a n:href="//Sign:restorePassword pubkey => $session->pubkey">
-            {link //Sign:restorePassword pubkey => $session->pubkey}</a><br>
-        Tento odkaz bude fungovat 24 hodin (do {$session->date_end|date:'d.m.Y H:i:s'})</p>
+Svoje heslo si můžeš nastavit na adrese: {link //Sign:restorePassword pubkey => $session->pubkey}
+ Tento odkaz bude fungovat 24 hodin (do {$session->date_end|date:'d.m.Y H:i:s'})
 
-    <p>Svůj profil najdeš na adrese: <a n:href="//User:profile">{link //User:profile}</a><br>
-        Zde si upravit své osobní údaje.</p>
+Svůj profil najdeš na adrese: {link //User:profile}
+ Zde si upravit své osobní údaje.
 
-    <p>Vstup na stránky pro členy: <a n:href="//Akce:default">{link //Akce:default}</a></p>
-{/block}
+Vstup na stránky pro členy: {link //Akce:default}
